<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".make_complaints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp_complaintOn"
            android:textSize="20sp" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/comp_Student"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_supervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/comp_super"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/comp_nameofthesuper"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerChooseNameOfSupervisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/comp_nameofthestudent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameForComplaints"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/et_bg2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/comp_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textOfComplaints"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:background="@drawable/et_bg2"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/BtnmakeComp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_bg2"
            android:textColor="@color/white"
            android:text="@string/makeComplaint"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</ScrollView>