<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changepasswordforsuper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingRight="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourId"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/firstStudentidforChangeroom"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg3"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/friendId"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/secondStudentidforChangeroom"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg3"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/requestchangeroomstaus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/RequestsSent"
            android:textAlignment="center"
            android:textColor="#3358FF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/myrequestchangeroomstaus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/statusrequest"
            android:textAlignment="center"
            android:textColor="#3358FF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/submitbunforchangeroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_bg2"
            android:text="@string/ta2ked"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>