<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student_info_page">

    <LinearLayout
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/linear"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtv_Student_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StudentPhoneNumber"
            android:textSize="20sp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/edt_Student_phone_num"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:ems="10"
            android:background="@drawable/et_bg2"
            android:textSize="18sp"
            android:inputType="number"
            android:text=""
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/txtv_Brother_phone_num"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/BrotherPhoneNumber"
            android:textSize="20sp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/edt_Brother_phone_num"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:textSize="18sp"
            android:ems="10"
            android:paddingLeft="5sp"
            android:background="@drawable/et_bg2"
            android:inputType="number"
            android:text=""
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/txtv_Mother_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MotherPhoneNumber"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/edt_Mother_phone_num"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="34dp"
            android:ems="10"
            android:paddingLeft="5sp"
            android:background="@drawable/et_bg2"
            android:inputType="number"
            android:text=""
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/txtv_Father_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/FahterPhoneNumber"
            android:textSize="20sp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/edt_Father_phone_num"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:ems="10"
            android:textSize="18sp"
            android:paddingLeft="5sp"
            android:background="@drawable/et_bg2"
            android:inputType="number"
            android:text=""
            android:layout_gravity="right"/>



        <TextView
            android:id="@+id/txtv_Home_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomePhoneNumber"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/edt_Home_phone_num"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_gravity="right"
            android:background="@drawable/et_bg2"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="5sp"
            android:text=""
            android:textSize="18sp" />


        <Button
            android:id="@+id/btn_save_student_info"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg2"
            android:layout_below="@id/linear"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>