<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="32dp"
            android:text="@string/sleepPer_choosePerson"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/personsSpinner"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:clickable="true"></Spinner>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/sleepPer_ouDate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_goingDate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg2"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"

            android:text="@string/sleepPer_backDate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_backDate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:background="@drawable/et_bg2"
            android:layout_marginRight="20dp"
            android:inputType="date" />

        <Button
            android:id="@+id/req_sleep_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_bg2"
            android:text="@string/done"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>