<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ILStatus"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/LaundryRoomStatus"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="null"
            android:textSize="22dp" />

        <ImageView
            android:id="@+id/img_laundry"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp" />

        <Button
            android:id="@+id/btnLaundryRoomReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLaundryRoomEndReservation"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/btn_bg2"
            android:enabled="false"
            android:text="@string/ILReserve"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLaundryRoomEndReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_bg3"
            android:enabled="false"
            android:text="@string/ILEndreserve"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


</ScrollView>